Fixed inline code alignment on iOS

--- a/wcfsetup/install/files/style/bbcode/inlineCode.scss
+++ b/wcfsetup/install/files/style/bbcode/inlineCode.scss
@@ -8,6 +8,7 @@ kbd {
 	font-family: Consolas, 'Courier New', monospace;
 	margin: 0 2px;
 	padding: 0 4px;
+	vertical-align: middle;
 	word-break: break-all;
 	word-wrap: break-word;
 }
